--- a/src/containers/Profile/styles.scss
+++ b/src/containers/Profile/styles.scss
@@ -37,6 +37,7 @@
     .detailsContainer {
       display: flex;
       flex-direction: column;
+      justify-content: space-evenly;
       background: #ffffff;
       color: #333333;
       width: 100%;
